Fix overlapping in gallery controls

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,7 +77,8 @@ body {
 
 .tk-gallery.cyclic .items
 {
-	height: 198px;
+	height: 235px;
+	overflow: hidden;
 }
 
 .tk-gallery.cyclic .controls
